<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/greenyellow"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="205dp"
        android:translationY="-30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/menu_start_text"
            android:textSize="28dp" />

        <Button
            android:id="@+id/challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/skin"
            android:text="@string/menu_challenge_text"
            android:textSize="28dp"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_marginBottom="280dp"

            android:orientation="horizontal">

            <Button
                android:id="@+id/achievements"
                android:layout_width="188dp"
                android:layout_height="65dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/greyyellow"
                android:text="@string/menu_achievements_text"
                android:textSize="18dp"
                android:translationY="-10.5dp" />

            <Button
                android:id="@+id/settings"
                android:layout_width="166dp"
                android:layout_height="66dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:backgroundTint="@color/grey"
                android:text="@string/menu_settings_text"
                android:textSize="19dp" />

        </LinearLayout>

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:backgroundTint="@color/purple"
            android:text="@string/menu_rank_text"
            android:textSize="28dp"
            android:translationY="-285dp" />


    </LinearLayout>
</RelativeLayout>